# TodoList

./: CMakeLists.txt  dbmanager.cpp  dbmanager.h  filter.cpp  filter.h  filter.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  task.h  taskcreationwindow.cpp  taskcreationwindow.h  taskcreationwindow.ui  taskeditionwindow.cpp  taskeditionwindow.h  taskeditionwindow.ui  tasklist.cpp  tasklist.h  taskwidget.cpp  taskwidget.h  taskwidget.ui
